--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 						
 							<article id="contact">
 								<h2 class="major">Contact</h2>
-								<form method="POST" action="http://formspree.io/homtingli@gmail.com">
+								<form method="POST" action="https://formspree.io/homtingli@gmail.com">
 									<div class="field">
   								<input type="email" name="email" placeholder="Your email">
 								</div>
