--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
 				
 					<footer id="footer">
-						<p class="copyright">Copyright © Homting 2015. Powered by Hugo && Dimension.</p>
+						<p class="copyright">Copyright © Jin LI 2015. Powered by Hugo && Dimension.</p>
 					</footer>
 
 			</div>
